@@ -960,6 +960,14 @@ Nielsen</glossterm>
 </glossentry>
 
 <glossentry>
+<glossterm><email>garrisonstuber@bellsouth.net</email> Michael
+      T. Garrison Stuber</glossterm>
+<glossdef>
+<para>report patch</para>
+</glossdef>
+</glossentry>
+
+<glossentry>
 <glossterm><email>bszx@bszxdomain.edu.eu.org</email> Bartek
       Szady</glossterm>
 <glossdef>
